--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,6 +47,10 @@
     <!-- SD卡读取权限，用户写入离线定位数据 -->
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
 
+    <!--通知震动-->
+    <uses-permission android:name="android.permission.VIBRATE" />
+
+
     <application
         android:name=".application.BaseApplication"
         android:allowBackup="true"
@@ -60,7 +64,6 @@
             android:theme="@style/SplashActivityTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -86,6 +89,7 @@
             android:exported="true" />
 
         <activity android:name=".ui.UpdateActivity" />
+
         <activity
             android:name=".ui.MyCodeActivity"
             android:label="我的二维码" />
@@ -94,20 +98,40 @@
         <meta-data
             android:name="com.baidu.lbsapi.API_KEY"
             android:value="iMHQBSoLMmbRDHFlOTeDUvkFrqL0GDo5" />
-
         <activity android:name=".ui.LocationActivity" />
 
-        <!-- 定位相关的配置 -->
+        <activity android:name=".ExampleActivity" />
+
         <meta-data
-            android:name="com.baidu.lbsapi.API_KEY"
-            android:value="iMHQBSoLMmbRDHFlOTeDUvkFrqL0GDo5"></meta-data>
+            android:name="Bmob_APP_KEY"
+            android:value="7801fcefd53f15f9c2e01615634767bc" />
+
         <!-- 定位service -->
         <service
             android:name="com.baidu.location.f"
             android:enabled="true"
-            android:process=":remote"></service>
+            android:process=":remote" />
 
-        <activity android:name=".ui.AboutActivity"></activity>
+        <activity android:name=".ui.AboutActivity" />
+
+        <!--TODO 集成：1.5、配置IM SDK需要的广播和服务-->
+        <receiver android:name="cn.bmob.newim.core.ConnectChangeReceiver" >
+            <intent-filter>
+                <action android:name="cn.bmob.action.RECONNECT" />
+                <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+                <action android:name="android.intent.action.USER_PRESENT" />
+            </intent-filter>
+        </receiver>
+        <service
+            android:name="cn.bmob.newim.core.service.BmobIMService"
+            android:process=":bmobcore" />
+        <service
+            android:name="cn.bmob.newim.core.service.NotifyService"
+            android:process=":bmobcore" />
+        <service android:name="cn.bmob.newim.core.service.ReConnectService" />
+        <service android:name="cn.bmob.newim.core.service.HeartBeatService" />
     </application>
+
 
 </manifest>
