--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,6 +73,9 @@ dependencies {
     compile project(path: ':libzxing')
     implementation files('libs/BaiduLBS_Android.jar')
 
+    implementation 'com.jakewharton:butterknife:8.8.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+
     //解决与bmob im冲突
 //    implementation 'com.koushikdutta.async:androidasync:2.+'
 
