--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,4 +81,8 @@ dependencies {
 
 //    implementation 'com.github.bumptech.glide:glide:4.7.1'
 //    annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
+
+    compile 'com.joanzapata.iconify:android-iconify-fontawesome:2.2.2' // (v4.5)
+    compile 'com.joanzapata.iconify:android-iconify-ionicons:2.2.2' // (v2.0.1)
+    compile 'com.joanzapata.iconify:android-iconify-material:2.2.2' // (v2.0.0)
 }
