--- a/app/build.gradle
+++ b/app/build.gradle
@@ -85,4 +85,7 @@ dependencies {
     compile 'com.joanzapata.iconify:android-iconify-fontawesome:2.2.2' // (v4.5)
     compile 'com.joanzapata.iconify:android-iconify-ionicons:2.2.2' // (v2.0.1)
     compile 'com.joanzapata.iconify:android-iconify-material:2.2.2' // (v2.0.0)
+
+    //eventBus依赖
+    compile 'org.greenrobot:eventbus:3.1.1'
 }
